--- a/manifest.yml
+++ b/manifest.yml
@@ -9,3 +9,5 @@ applications:
     env:
       TARGET_RUNTIME: tomcat
       JBP_CONFIG_COMPONENTS: "jres: ['com.sap.xs.java.buildpack.jdk.SAPMachineJDK']"
+    services:
+    - javauaa
