--- a/manifest.yml
+++ b/manifest.yml
@@ -32,3 +32,16 @@ applications:
           }
         ]
       TENANT_HOST_PATTERN: "^(.*)-approuter-helloworld.cfapps.us10-001.hana.ondemand.com"
+
+#Postgres
+  - name: persistence
+    memory: 768M
+    host: persistence-i042557
+    path: target/java-tutorial-1.0.jar
+    buildpack: sap_java_buildpack
+    env:
+      TARGET_RUNTIME: main
+      JBP_CONFIG_SAPJVM_MEMORY_SIZES: 'metaspace:96m..'
+      SPRING_PROFILES_ACTIVE: cloud
+    services:
+      - postgres_instance
