--- a/manifest.yml
+++ b/manifest.yml
@@ -3,16 +3,17 @@ applications:
   - name: helloworld
     routes:
       - route: helloworld-app.cfapps.us10-001.hana.ondemand.com
-    path: ./target/java-tutorial-0.0.1-SNAPSHOT.jar
+    path: ./target/btpapp-1.0.jar
     memory: 1024M
     buildpacks:
       - sap_java_buildpack
-    services:
-      - xsuaa-service
-      - saas-registry-instance
     env:
       TARGET_RUNTIME: tomcat
       JBP_CONFIG_COMPONENTS: "jres: ['com.sap.xs.java.buildpack.jdk.SAPMachineJDK']"
+    services:
+      - xsuaa-service
+      - saas-registry-instance
+      - postgres-instance
 
 # Application Router
   - name: approuter
@@ -20,8 +21,6 @@ applications:
       - route: approuter-helloworld.cfapps.us10-001.hana.ondemand.com
     path: approuter
     memory: 1024M
-    services:
-      - xsuaa-service
     env:
       destinations: >
         [
@@ -32,16 +31,5 @@ applications:
           }
         ]
       TENANT_HOST_PATTERN: "^(.*)-approuter-helloworld.cfapps.us10-001.hana.ondemand.com"
-
-#Postgres
-  - name: persistence
-    memory: 768M
-    host: persistence-i042557
-    path: target/java-tutorial-1.0.jar
-    buildpack: sap_java_buildpack
-    env:
-      TARGET_RUNTIME: main
-      JBP_CONFIG_SAPJVM_MEMORY_SIZES: 'metaspace:96m..'
-      SPRING_PROFILES_ACTIVE: cloud
     services:
-      - postgres_instance
+      - xsuaa-service
