--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,15 +1,22 @@
+server:
+  port: 8080
+
 spring:
+  #Hibernate
   jpa:
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
       ddl-auto: update
+ #Database
   datasource:
-    url: jdbc:postgresql://localhost:5432/DB_helloworld
-    username: username
-    password: password
+    driver-class-name: org.postgresql.Driver
+    username: ${vcap.services.books-postgres-db.credentials.username}
+    password: ${vcap.services.books-postgres-db.credentials.password}
+    url: jdbc:postgresql://${vcap.services.books-postgres-db.credentials.hostname}:${vcap.services.books-postgres-db.credentials.port}/${vcap.services.books-postgres-db.credentials.dbname}
+  #Jackson
+  jackson:
+    default-property-inclusion: non_null
 
 multitenant:
   defaultTenant: public
@@ -19,6 +26,9 @@ logging:
     com.github.com.github.kaydunovdenis: DEBUG
     com.sap.cloud.sdk: INFO
     root: WARN
-
-server:
-  port: 8080
+# actuator
+management:
+  endpoints:
+    web:
+      exposure:
+        include: beans,health,httptrace
