--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,17 +1,3 @@
 databaseChangeLog:
-  - changeSet:
-      id: 1
-      author: myuser
-      changes:
-        - createTable:
-            tableName: costcenterforecast
-            columns:
-              - column:
-                  name: name
-                  type: varchar(100)
-                  constraints:
-                    primaryKey: true
-                    nullable: false
-              - column:
-                  name: forecast
-                  type: float
+  - include:
+      file: db/changelog/db.changelog-1.0.yaml
