--- a/manifest.yml
+++ b/manifest.yml
@@ -14,6 +14,7 @@ applications:
       - xsuaa-service
       - saas-registry-instance
       - postgres-instance
+      - myapplogs
 
 # Application Router
   - name: approuter
