--- a/manifest.yml
+++ b/manifest.yml
@@ -7,9 +7,12 @@ applications:
     memory: 1024M
     buildpacks:
       - sap_java_buildpack
+    JBP_CONFIG_JAVA_OPTS: "[java_opts: '-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=n,onjcmd=y']"
     env:
+      JBP_CONFIG_SAP_MACHINE_JDK: "[default_debug_agent_active: true]"
       TARGET_RUNTIME: tomcat
       JBP_CONFIG_COMPONENTS: "jres: ['com.sap.xs.java.buildpack.jdk.SAPMachineJDK']"
+
     services:
       - xsuaa-service
       - saas-registry-instance
