--- a/approuter/xs-app.json
+++ b/approuter/xs-app.json
@@ -1,9 +1,9 @@
 {
   "routes": [
     {
-      "source": "^/helloworld/(.*)$",
+      "source": "^/sbtp/(.*)$",
       "target": "$1",
-      "destination": "helloworld"
+      "destination": "sbtp"
     }
   ]
 }
