--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-  "xsappname":"helloworld",
+  "xsappname":"sbtp",
   "appUrls": {
-    "onSubscription" : "https://helloworld-app.cfapps.us10-001.hana.ondemand.com/callback/v1.0/tenants/{tenantId}"
+    "onSubscription" : "https://sbtp-app-rout.cfapps.us10-001.hana.ondemand.com/callback/v1.0/tenants/{tenantId}"
   },
   "displayName" : "Helloworld MTA",
   "description" : "Helloworld MTA sample application",
